# ml-from-scratch

./: .gitignore  CONTRIBUTING.md  LICENSE_REVIEW.md  PROJECT_INDEX.md  README.md  SECURITY.md  bandit.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: design-decisions.md
projects/257086855/: dumbClassifiers.py
projects/258095197/: gd.py  multiclass.py
projects/258674342/: nn.py
projects/binary-classifiers/: dt.py  knn.py  perceptron.py
projects/linear-and-multiclass-models/: linear.py
projects/pca-and-neural-networks/: dr.py  softmax.py
src/classifiers/: baselines.py  decision_tree.py  knn.py  multiclass.py
src/decomposition/: pca.py
src/linear_models/: linear_classifiers.py  perceptron.py  softmax_regression.py
src/neural_nets/: mlp.py
src/optimization/: gradient_descent.py
tests/: test_imports.py
