[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Independent machine-learning-from-scratch implementations for study and portfolio review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.5",
  "bandit>=1.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
# Exclude the tools directory from automatic formatting checks. The tools/ script
# is a compact, single-file utility that intentionally uses condensed layout and
# platform-invoking logic that development tooling scans separately.
exclude = '/(notebooks|\\.git|\\.venv|venv|build|dist|tools)/'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
